--- a/index.html
+++ b/index.html
@@ -30,11 +30,17 @@
         </div>
         <div class="navbar__s3">
             <p>Courses</p>
+            <div class="mylearning">
             <p>My Learning</p>
-            <i class="fa-solid fa-cart-shopping"></i>
+            <div class="mylearning__popup">
+                <p>you didn't purchase any course</p>
+            </div>
+        </div>
+        
+            <P><i class="fa-solid fa-cart-shopping"></i>
             <i class="fa-solid fa-bell"></i>
             <i class="fa-solid fa-user"></i>
-        </div>
+        </P></div>
     </div>
     <!-- categories -->
     <div class="categories">
@@ -49,6 +55,10 @@
     <!-- sale image -->
     <div class="sale-image">
         <img src="./images/udemy_cover.jpg" alt="">
+        <div class="sale-image__offer">
+            <h1>Udemy Flash Sale! 24 hours to save.</h1>
+            <p>Get the top Courses for just 499. Just one day to save but a lifetime to learn</p>
+        </div>
     </div>
     <!-- recommended -->
     <div class="recommended">
