media query update

--- a/index.html
+++ b/index.html
@@ -35,13 +35,16 @@
             <div class="mylearning__popup">
                 <p>you didn't purchase any course</p>
             </div>
+            
         </div>
         
             <P><i class="fa-solid fa-cart-shopping"></i>
             <i class="fa-solid fa-bell"></i>
             <i class="fa-solid fa-user"></i>
         </P></div>
-    </div>
+        <div class="navbar__s4">
+            <i class="fa-solid fa-bars"></i></div>
+        </div>
     <!-- categories -->
     <div class="categories">
         <P>Development</P>
